tests/negative/test_raw_memb_eval_asgn.orb
fnc main () () {
    eval (sym (a 0));
    = (. \(,a) 0) 99;
};